--- a/.htaccess
+++ b/.htaccess
@@ -11,3 +11,9 @@ RewriteRule ^$ /Webler/index.php [L]
 <Files "config.php">
     Require all denied
 </Files>
+
+# Disable .js, .css files caching
+<FilesMatch "\.(js|css)$">
+    Header set Cache-Control "no-store, no-cache, must-revalidate, max-age=0"
+    Header set Pragma "no-cache"
+</FilesMatch>
