--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,8 @@
     "name": "webler/webler-group",
     "type": "project",
     "require": {
-        "phpmailer/phpmailer": "^6.9"
+        "phpmailer/phpmailer": "^6.9",
+        "cboden/ratchet": "^0.4.4",
+        "monolog/monolog": "^3.8"
     }
 }
